# ma-exp

./: .gitignore  README.md  README_MARL.md  compare_all_methods.py  compare_eta_vs_ilrl.py  debug_test.py  diagnose.py  ilrl_model.pth  main.py  marl_model.pth  package-lock.json  pyproject.toml  train_ilrl.py  train_marl.py  多智能体与智能机器人知识点整理.docx  实验四报告.docx
.workbuddy/memory/: 2026-05-08.md
data/: morning_peak.csv  morning_peak_times.csv
docs/algorithm_docs/: eta_based.md  ilrl_baesd.md  multi_agent_rl.md
docs/papers/: README.md
docs/reports/: industrial_algorithm_report.md
src/: experiment_runner.py  experiment_runner_new.py  simulator.py  visualization.py
src/algorithms/: __init__.py  base.py  eta_based.py  ilrl_based.py  multi_agent_rl.py
